[package]
name = "authenticator"
version = "0.2.4"
authors = ["J.C. Jones <jc@mozilla.com>", "Tim Taubert <ttaubert@mozilla.com>", "Kyle Machulis <kyle@nonpolynomial.com>"]

[target.'cfg(target_os = "linux")'.dependencies]
libudev = "^0.2"

[target.'cfg(target_os = "freebsd")'.dependencies]
devd-rs = "0.3"

[target.'cfg(target_os = "macos")'.dependencies]
core-foundation = "0.6.2"

[target.'cfg(target_os = "windows")'.dependencies.winapi]
version = "0.3"
features = [
    "handleapi",
    "hidclass",
    "hidpi",
    "hidusage",
    "setupapi",
]

[dependencies]
rand = "0.6"
log = "0.4"
libc = "0.2"
boxfnonce = "0.0.3"
runloop = "0.1.0"
base64 = "0.10.1"
bitflags = "1.0"
byteorder = "1.3"
pretty-hex = "0.1"
serde = "1.0"
serde_bytes = "0.10"
serde_derive = "1.0"
serde_json = "1.0"
sha2 = "0.8.0"
hmac = "0.7.0"
nom = "4.2"
cose = {path = "cose"}
openssl = "0.10"
der-parser = "1.1.1"

[dependencies.serde_cbor]
git = "https://github.com/baloo/cbor"
# master is needed because we need a feature:
#   https://github.com/pyfisch/cbor/pull/101
# master is broken, see:
#   https://github.com/pyfisch/cbor/pull/106
branch = "baloo/fixup-serde_bytes_dependency"

[dev-dependencies]
sha2 = "^0.8"
base64 = "^0.10"
env_logger = "0.6"
hex-literal = "0.1.4"
once_cell = "0.1.8"
simple_logger = "1.0.1"
ring = "0.14"
untrusted = "0.6"

