[package]
name = "authenticator"
version = "0.2.12"
authors = ["J.C. Jones <jc@mozilla.com>", "Tim Taubert <ttaubert@mozilla.com>", "Kyle Machulis <kyle@nonpolynomial.com>"]
repository = "https://github.com/mozilla/authenticator-rs/"
license = "MPL-2.0"
description = "Library for interacting with CTAP1/2 security keys for Web Authentication. Used by Firefox."

[features]
binding-recompile = ["bindgen"]

[target.'cfg(target_os = "linux")'.dependencies]
libudev = "^0.2"

[target.'cfg(target_os = "freebsd")'.dependencies]
devd-rs = "0.3"

[target.'cfg(target_os = "macos")'.dependencies]
core-foundation = "0.7"

[target.'cfg(target_os = "windows")'.dependencies.winapi]
version = "0.3"
features = [
    "handleapi",
    "hidclass",
    "hidpi",
    "hidusage",
    "setupapi",
]

[build-dependencies]
bindgen = { version = "0.51", optional = true }

[dependencies]
rand = "0.7"
log = "0.4"
libc = "0.2"
boxfnonce = "0.0.3"
runloop = "0.1.0"
bitflags = "1.0"

[dev-dependencies]
sha2 = "^0.8"
base64 = "^0.10"
env_logger = "0.6"
